# serializer version: 1
# name: test_evaluation_states[platforms0-tests/fixtures/camera-example.yaml-idle]
  dict({
    'binary_sensor.outdoor_camera_motion': 'off',
    'binary_sensor.outdoor_camera_person': 'off',
    'binary_sensor.outdoor_camera_sound': 'off',
  })
# ---
# name: test_evaluation_states[platforms1-tests/fixtures/camera-example.yaml-person-detected]
  dict({
    'binary_sensor.outdoor_camera_motion': 'on',
    'binary_sensor.outdoor_camera_person': 'on',
    'binary_sensor.outdoor_camera_sound': 'off',
  })
# ---
# name: test_evaluation_states[platforms2-tests/fixtures/camera-example.yaml-sound-detected]
  dict({
    'binary_sensor.outdoor_camera_motion': 'off',
    'binary_sensor.outdoor_camera_person': 'off',
    'binary_sensor.outdoor_camera_sound': 'on',
  })
# ---
# name: test_evaluation_states[platforms3-tests/fixtures/camera-example.yaml-motion-detected]
  dict({
    'binary_sensor.outdoor_camera_motion': 'on',
    'binary_sensor.outdoor_camera_person': 'off',
    'binary_sensor.outdoor_camera_sound': 'off',
  })
# ---
# name: test_evaluation_states[platforms4-tests/fixtures/camera-example.yaml-person-detected]
  dict({
    'binary_sensor.outdoor_camera_motion': 'on',
    'binary_sensor.outdoor_camera_person': 'on',
    'binary_sensor.outdoor_camera_sound': 'off',
  })
# ---
# name: test_evaluation_states[platforms5-tests/fixtures/camera-example.yaml-sound-detected]
  dict({
    'binary_sensor.outdoor_camera_motion': 'off',
    'binary_sensor.outdoor_camera_person': 'off',
    'binary_sensor.outdoor_camera_sound': 'on',
  })
# ---
